# confidencecompass

./: .replit  README.md  package-lock.json  package.json  pyproject.toml
attached_assets/: prompt
client/src/: App.tsx  index.css
client/src/components/conversation/: face-tracking-display.tsx  livekit-room.tsx  voice-analysis-display.tsx
client/src/components/dashboard/: progress-chart.tsx
client/src/components/layout/: sidebar.tsx
client/src/components/practice/: voice-analyzer.tsx
client/src/hooks/: use-advanced-eye-tracking.ts  use-camera.ts  use-eye-tracking.ts  use-voice-analyzer.ts
client/src/lib/: advanced-audio-analysis.ts  audio-utils.ts  enhanced-voice-analyzer.ts  eye-tracking-metrics.ts  integration-service.ts  mediapipe-utils.ts
client/src/pages/: ai-conversation.tsx  dashboard.tsx  practice-session.tsx  session-history.tsx
server/: ai-agent.ts  ai-conversation-service.ts  livekit-service.ts  livekit-voice-agent.py  routes.ts  simple-voice-agent.py  storage.ts
shared/: schema.ts
